--- a/src/CafeDevCode.Website/Views/Partial/PortalSocialLink.cshtml
+++ b/src/CafeDevCode.Website/Views/Partial/PortalSocialLink.cshtml
@@ -1,4 +1,4 @@
-﻿<style>
+﻿@*<style>
     .fa-brands {
         padding: 10px;
         font-size: 25px;
@@ -40,18 +40,24 @@
         background: #dd4b39;
         color: white;
     }
-</style>
+</style>*@
 
 @{
     string currentUrl = Context.Request.Scheme + "://" + Context.Request.Host + Context.Request.Path;
     string enc = System.Net.WebUtility.UrlEncode(currentUrl);
 }
 
-<div class="social d-none d-md-block" style="position: fixed; left: 0; bottom: 50%">
+<div class="d-none d-md-block" style="position: fixed; left: 0; bottom: 50%">
     <ul style="list-style-type:none; margin:0; padding: 0">
-        <li>
-            <a href="https://www.facebook.com/" target="_blank" class="social-icon"><i class="fa-brands fa-facebook-f"></i></a>
+        <li style="background: #3B5998; padding: 16px;">
+            <a href="https://www.facebook.com/" target="_blank" class="social-icon text-white" style="font-size: 24px;">
+                <i class="fa-brands fa-facebook-f"></i>
+            </a>
         </li>
-        <li><a href="https://www.youtube.com/channel/UCAaLM4yLnIK1XrcZXFgtVYA" class="social-icon"><i class="fa-brands fa-youtube"></i></a></li>
+        <li style="background: #bb0000; padding: 16px;">
+            <a href="https://www.youtube.com/channel/UCAaLM4yLnIK1XrcZXFgtVYA" class="social-icon text-white" style="font-size: 24px;">
+                <i class="fa-brands fa-youtube"></i>
+            </a>
+        </li>
     </ul>
 </div>
